--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--custom css file link-->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <!--fonts awesome cdn link-->
 
     <link
@@ -238,6 +238,6 @@
     <!--swiper js file link-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!--custom js file link-->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
