--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="swiper-wrapper">
           <section
             class="swiper-slide slide"
-            style="background: url(/images/slider1.jpeg)"
+            style="background: url(images/slider1.jpeg)"
           >
             <div class="content">
               <h3>we provide best service</h3>
@@ -108,7 +108,7 @@
 
           <section
             class="swiper-slide slide"
-            style="background: url(/images/slider3.jpeg)"
+            style="background: url(images/slider3.jpeg)"
           >
             <div class="content">
               <h3>making dream come to life</h3>
@@ -181,7 +181,7 @@
       <h1 class="heading">Our Services</h1>
       <div class="services-box-container">
         <div class="servicesbox">
-          <img src="/images/arch.png" />
+          <img src="images/arch.png" />
           <h3>Architectural Design</h3>
           <p>
             Our architects create functional and stunning spaces tailored to
@@ -190,7 +190,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="/images/2.png" />
+          <img src="images/2.png" />
           <h3>Construction and Planning</h3>
           <p>
             We handle every stage of construction, ensuring seamless execution
@@ -199,7 +199,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="/images/3.png" />
+          <img src="images/3.png" />
           <h3>Residential Housing Projects</h3>
           <p>
             We specialize in crafting beautiful and livable spaces for families
@@ -208,7 +208,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="/images/4.png" />
+          <img src="images/4.png" />
           <h3>Commercial Projects</h3>
           <p>
             Design spaces that elevate your brand and functionality, fostering
@@ -217,7 +217,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="/images/5.png" />
+          <img src="images/5.png" />
           <h3>Interior Design and Execution</h3>
           <p>
             Our designers create harmonious and aesthetically pleasing interiors
