--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--custom css file link-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <!--fonts awesome cdn link-->
 
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css"
+      integrity="sha512-kwJUhJJaTDzGp6VTPBbMQWBFUof6+pv0SM3s8fo+E6XnPmVmtfwENK0vHYup3tsYnqHgRDoBDTJWoq7rnQw2+g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <!--swiperjs cdn link-->
     <link
@@ -72,7 +80,7 @@
         <div class="swiper-wrapper">
           <section
             class="swiper-slide slide"
-            style="background: url(images/slider1.jpeg)"
+            style="background: url(/images/slider1.jpeg)"
           >
             <div class="content">
               <h3>we provide best service</h3>
@@ -108,7 +116,7 @@
 
           <section
             class="swiper-slide slide"
-            style="background: url(images/slider3.jpeg)"
+            style="background: url(/images/slider3.jpeg)"
           >
             <div class="content">
               <h3>making dream come to life</h3>
@@ -175,13 +183,11 @@
     <!--about sections ends here-->
 
     <!--services sections starts here-->
-
-    <!--services sections ends here-->
     <section class="services" id="services">
       <h1 class="heading">Our Services</h1>
       <div class="services-box-container">
         <div class="servicesbox">
-          <img src="images/arch.png" />
+          <img src="/images/arch.png" />
           <h3>Architectural Design</h3>
           <p>
             Our architects create functional and stunning spaces tailored to
@@ -190,7 +196,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="images/2.png" />
+          <img src="/images/2.png" />
           <h3>Construction and Planning</h3>
           <p>
             We handle every stage of construction, ensuring seamless execution
@@ -199,7 +205,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="images/3.png" />
+          <img src="/images/3.png" />
           <h3>Residential Housing Projects</h3>
           <p>
             We specialize in crafting beautiful and livable spaces for families
@@ -208,7 +214,7 @@
         </div>
 
         <div class="servicesbox">
-          <img src="images/4.png" />
+          <img src="/images/4.png" />
           <h3>Commercial Projects</h3>
           <p>
             Design spaces that elevate your brand and functionality, fostering
@@ -217,14 +223,13 @@
         </div>
 
         <div class="servicesbox">
-          <img src="images/5.png" />
+          <img src="/images/5.png" />
           <h3>Interior Design and Execution</h3>
           <p>
             Our designers create harmonious and aesthetically pleasing interiors
             that reflect your vision.
           </p>
         </div>
-
         <div class="servicesbox">
           <img src="images/6.png" />
           <h3>Major Renovations Projects</h3>
@@ -235,9 +240,112 @@
         </div>
       </div>
     </section>
+    <!--services sections ends here-->
+
+    <!--projects sections starts here-->
+    <section class="projects" id="projects">
+      <h1 class="heading" style="color: white">Our Projects</h1>
+      <div class="projects-box-container">
+        <a href="images/p1.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p1.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/p2.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p2.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/p3.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p3.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/p4.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p4.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/p5.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p5.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/p6.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p6.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+
+        <a href="images/p1.jpeg" class="projects-box">
+          <div class="image">
+            <img src="images/p1.jpeg" alt="" />
+          </div>
+          <div class="project-content">
+            <div class="project-info">
+              <h3>dream home</h3>
+              <p>construction, design</p>
+            </div>
+            <i class="fas fa-plus"></i>
+          </div>
+        </a>
+      </div>
+    </section>
+    <!--projects sections ends here-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
     <!--swiper js file link-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!--custom js file link-->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
+    <script>
+      lightGallery(document.querySelector(".projects .projects-box-container"));
+    </script>
   </body>
 </html>
