--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <!--swiper js file link-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!--custom js file link-->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script>
       lightGallery(document.querySelector(".projects .projects-box-container"));
     </script>
