--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="#about">about</a>
         <a href="#services">services</a>
         <a href="#projects">projects</a>
+        <a href="#team">our team</a>
         <a href="#contact">contact</a>
       </nav>
       <div class="icons">
@@ -246,92 +247,85 @@
     <section class="projects" id="projects">
       <h1 class="heading" style="color: white">Our Projects</h1>
       <div class="projects-box-container">
-        <a href="images/p1.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
             <img src="images/p1.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
         </a>
 
-        <a href="images/p2.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
             <img src="images/p2.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
         </a>
 
-        <a href="images/p3.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
             <img src="images/p3.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
         </a>
 
-        <a href="images/p4.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
             <img src="images/p4.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
         </a>
 
-        <a href="images/p5.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
-            <img src="images/p5.jpeg" alt="" />
+            <img src="images/p2.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
         </a>
 
-        <a href="images/p6.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
-            <img src="images/p6.jpeg" alt="" />
+            <img src="images/p2.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
         </a>
 
-        <a href="images/p1.jpeg" class="projects-box">
+        <a href="" class="projects-box">
           <div class="image">
             <img src="images/p1.jpeg" alt="" />
           </div>
           <div class="project-content">
             <div class="project-info">
-              <h3>dream home</h3>
-              <p>construction, design</p>
+              <h3>know more ></h3>
             </div>
             <i class="fas fa-plus"></i>
           </div>
@@ -339,13 +333,113 @@
       </div>
     </section>
     <!--projects sections ends here-->
+    <!--contact sections starts here-->
+    <section class="contact" id="contact">
+      <h1 class="heading">Contact Us</h1>
+      <div class="row">
+        <iframe
+          class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3882.670830340825!2d75.7940167!3d13.308491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbad77f6b8853b5%3A0xaefdd637ace50db8!2sDev%E2%80%99s%20residence!5e0!3m2!1sen!2sin!4v1717173694838!5m2!1sen!2sin"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+
+        <form action="">
+          <h3>Get in Touch</h3>
+          <input type="text" placeholder="name" class="form-box" />
+          <input type="email" placeholder="email" class="form-box" />
+          <input type="number" placeholder="phone" class="form-box" />
+          <textarea
+            type="text"
+            placeholder="message"
+            class="form-box"
+            id=""
+            cols="30"
+            rows="10"
+          ></textarea>
+          <div class="submit-btn">
+            <a href="">Submit</a>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!--contact sections ends here-->
+
+    <!--brands sections starts here-->
+    <section class="logo-container">
+      <h1 class="heading">We choose <br />THE BEST BRANDS FOR YOU</h1>
+      <div class="swiper logo-slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide">
+            <img src="images/brand1.jpeg" alt="Brand 1" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand2.jpeg" alt="Brand 2" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand3.jpeg" alt="Brand 3" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand4.webp" alt="Brand 4" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand5.png" alt="Brand 5" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand6.webp" alt="Brand 6" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand7.webp" alt="Brand 7" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand8.webp" alt="Brand 8" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand9.png" alt="Brand 9" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand10.png" alt="Brand 10" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand11.jpg" alt="Brand 11" />
+          </div>
+          <div class="swiper-slide slide">
+            <img src="images/brand12.png" alt="Brand 12" />
+          </div>
+          <!-- <div class="swiper-slide slide">
+            <img src="images/brand13.png" alt="Brand 13" />
+          </div> -->
+        </div>
+      </div>
+    </section>
+
+    <!--brands sections ends here-->
+
+    <!--footer sections starts here-->
+    <section class="footer">
+      <!-- <div class="links">
+        <a class="btn" href="#home">home</a>
+        <a class="btn" href="#about">about</a>
+        <a class="btn" href="#services">services</a>
+        <a class="btn" href="#projects">projects</a>
+        <a class="btn" href="#team">our team</a>
+        <a class="btn" href="#contact">contact</a>
+      </div> -->
+      <div class="credit">
+        All rights reserved
+        <span style="color: #f5bf23">| Dev Constructions | </span>2024
+      </div>
+    </section>
+    <!--footer sections ends here-->
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
     <!--swiper js file link-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!--custom js file link-->
     <script src="script.js"></script>
-    <script>
+    <!-- <script>
       lightGallery(document.querySelector(".projects .projects-box-container"));
-    </script>
+    </script> -->
   </body>
 </html>
