--- a/index.html
+++ b/index.html
@@ -246,90 +246,82 @@
     <!--projects sections starts here-->
     <section class="projects" id="projects">
       <h1 class="heading" style="color: white">Our Projects</h1>
-      <div class="projects-box-container">
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p1.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
+      <div class="card-container">
+        <div class="card">
+          <img src="images/p1.webp" alt="Client 1 Image" class="card-image" />
+          <div class="card-content">
+            <h2 class="client-name">Mr. Sandy's Home</h2>
+            <div class="card-details">
+              <div class="detail-item">
+                <span class="icon">📍</span>
+                <span class="text">Bangalore</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">🏠</span>
+                <span class="text">G+2</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">📏</span>
+                <span class="text">3,350 sq.ft</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">💰</span>
+                <span class="text">30 Lakhs</span>
+              </div>
             </div>
-            <i class="fas fa-plus"></i>
+            <a href="#" class="know-more">Know more -></a>
           </div>
-        </a>
-
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p2.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
+        </div>
+        <div class="card">
+          <img src="images/p3.webp" alt="Client 2 Image" class="card-image" />
+          <div class="card-content">
+            <h2 class="client-name">Mr. Amruth's Home</h2>
+            <div class="card-details">
+              <div class="detail-item">
+                <span class="icon">📍</span>
+                <span class="text">Mumbai</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">🏠</span>
+                <span class="text">G+3</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">📏</span>
+                <span class="text">4,500 sq.ft</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">💰</span>
+                <span class="text">50 Lakhs</span>
+              </div>
             </div>
-            <i class="fas fa-plus"></i>
+            <a href="#" class="know-more">Know more -></a>
           </div>
-        </a>
-
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p3.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
+        </div>
+        <div class="card">
+          <img src="images/p2.webp" alt="Client 3 Image" class="card-image" />
+          <div class="card-content">
+            <h2 class="client-name">Mr. Sanath's Home</h2>
+            <div class="card-details">
+              <div class="detail-item">
+                <span class="icon">📍</span>
+                <span class="text">Chennai</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">🏠</span>
+                <span class="text">G+1</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">📏</span>
+                <span class="text">2,800 sq.ft</span>
+              </div>
+              <div class="detail-item">
+                <span class="icon">💰</span>
+                <span class="text">25 Lakhs</span>
+              </div>
             </div>
-            <i class="fas fa-plus"></i>
+            <a href="#" class="know-more">Know more -></a>
           </div>
-        </a>
-
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p4.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
-            </div>
-            <i class="fas fa-plus"></i>
-          </div>
-        </a>
-
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p2.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
-            </div>
-            <i class="fas fa-plus"></i>
-          </div>
-        </a>
-
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p2.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
-            </div>
-            <i class="fas fa-plus"></i>
-          </div>
-        </a>
-
-        <a href="" class="projects-box">
-          <div class="image">
-            <img src="images/p1.jpeg" alt="" />
-          </div>
-          <div class="project-content">
-            <div class="project-info">
-              <h3>know more ></h3>
-            </div>
-            <i class="fas fa-plus"></i>
-          </div>
-        </a>
+        </div>
       </div>
     </section>
     <!--projects sections ends here-->
