--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <span class="text">30 Lakhs</span>
               </div>
             </div>
-            <a href="#" class="know-more">Know more -></a>
+            <a href="home.html" class="know-more">Know more -></a>
           </div>
         </div>
         <div class="card">
@@ -294,7 +294,7 @@
                 <span class="text">50 Lakhs</span>
               </div>
             </div>
-            <a href="#" class="know-more">Know more -></a>
+            <a href="home.html" class="know-more">Know more -></a>
           </div>
         </div>
         <div class="card">
@@ -319,7 +319,7 @@
                 <span class="text">25 Lakhs</span>
               </div>
             </div>
-            <a href="#" class="know-more">Know more -></a>
+            <a href="home.html" class="know-more">Know more -></a>
           </div>
         </div>
       </div>
