--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
   <body>
     <header class="hero">
       <img src="images/p1.webp" alt="Client Image" class="hero-image" />
-      <div class="hero-text">Mr. Sandy</div>
+      <div class="hero-text">Mr. Sandy's Home</div>
     </header>
 
     <section class="overview">
