--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="header">
       <a href="#" class="logo">Dev<span>Constructions</span></a>
       <nav class="navbar">
-        <a href="#home">home</a>
+        <a href="admin.html">home</a>
         <a href="#about">about</a>
         <a href="#services">services</a>
         <a href="#projects">projects</a>
